--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
 						</div>
 					</section>
 
+				<!-- Get in touch -->
+				<section class="wrapper style1 align-center">
+					<div class="inner medium">
+						<h2>Free estimate</h2>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field half">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" value="" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="email" name="email" id="email" value="" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="6"></textarea>
+								</div>
+							</div>
+							<ul class="actions special">
+								<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+							</ul>
+						</form>
+
+					</div>
+				</section>
+
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
@@ -302,7 +329,7 @@
 						</div>
 					</section>
 
-				<!-- Seven -->
+				<!-- Get in touch -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
