--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner onload-image-fade-in onload-content-fade-right style2 orient-center content-align-center image-position-center -">
+					<section class="banner onload-image-fade-in onload-content-fade-up style2 orient-center content-align-center image-position-center -">
 						<div class="content">
 							<h1>All-Pro Home Services Utah</h1>
 							<p class="major">Welcome to All-Pro Home Services! We specialize in transforming kitchens and bathrooms into beautiful and functional spaces that you'll love. From design to installation, we'll work with you every step of the way to create your dream home. </p>
 								<p>We also specialize in remodeling and finishing basements. If you are looking for a great way to add more space and increase the value of your home, consider finishing your basement.</p>
 							<ul class="actions stacked">
-								<li><a href="tel:3854691995" class="button big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
+								<li><a href="tel:3854691995" class="button primary large big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -33,39 +33,68 @@
 					</section>
 
 				<!-- Get in touch -->
-				<section class="wrapper style1 align-center">
-					<div class="inner medium">
-						<h2>Free estimate</h2>
-						<form method="post" action="#">
+				<section class="wrapper banner style1 align-center">
+					<div class="inner medium align-center">
+						<h2>Free Estimate!</h2>
+						<!-- <form method="post" action="#">
 							<div class="fields">
 								<div class="field half">
-									<label for="name">Name</label>
+									<label for="name">Full Name *</label>
 									<input type="text" name="name" id="name" value="" />
 								</div>
 								<div class="field half">
-									<label for="email">Email</label>
+									<label for="email">Email *</label>
 									<input type="email" name="email" id="email" value="" />
 								</div>
 								<div class="field">
-									<label for="message">Message</label>
+									<label for="name">Phone Number *</label>
+									<input type="text" name="name" id="name" value="" />
+								</div>
+								<div class="field">
+									<label for="message">Tell us about your project. *</label>
 									<textarea name="message" id="message" rows="6"></textarea>
 								</div>
 							</div>
 							<ul class="actions special">
 								<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
 							</ul>
-						</form>
-
+						</form> -->
+						<iframe 
+          src="https://api.leadconnectorhq.com/widget/form/euVgecyvznM0zKPaTeJa" 
+          style="width:100%;height:100%;border:none;border-radius:4px"
+          id="inline-euVgecyvznM0zKPaTeJa" 
+        data-layout="{'id':'INLINE'}"
+        data-trigger-type="alwaysShow"
+        data-trigger-value=""
+        data-activation-type="alwaysActivated"
+        data-activation-value=""
+        data-deactivation-type="neverDeactivate"
+        data-deactivation-value=""
+        data-form-name="All-Pro Home Services Utah"
+        data-height="633"
+        data-layout-iframe-id="inline-euVgecyvznM0zKPaTeJa"
+        data-form-id="euVgecyvznM0zKPaTeJa"
+        title="All-Pro Home Services Utah"
+      >
+        </iframe>
+        <script src="https://link.msgsndr.com/js/form_embed.js"></script>
 					</div>
 				</section>
+
+				
+      
 
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Kitchens</h2>
-							<p>It's time to update those kitchens. We are offering $250 off any home improvement remodeling project. We do it all! Sign up today and get a FREE quote.</p>
+							<header>
+								<h2>Kitchens</h2>
+								<p>Kitchen remodels in Salt Lake City and Northern Utah</p>
+							</header>
+							<p>Looking to update your kitchen? We offer a variety of kitchen remodeling services to help you create the kitchen of your dreams. Whether you're looking for a complete overhaul or just a few minor changes, we can help you achieve the look you want.</p>
+							<p>We start by working with you to understand your needs and goals for your kitchen remodel. Once we have a clear understanding of what you're looking for, we'll create a custom plan that fits your budget and timeline.</p>
 							<ul class="actions stacked">
-								<li><a href="tel:3854691995" class="button big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
+								<li><a href="tel:3854691995" class="button primary large big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -74,12 +103,16 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-right image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Bathrooms</h2>
-							<p>It's time to update those bathrooms. We are offering $250 off any home improvement remodeling project. We do it all! Sign up today and get a FREE quote.</p>
+							<header>
+								<h2>Bathrooms</h2>
+								<p>Bathrooms remodels in Salt Lake City and Northern Utah</p>
+							</header>
+							<p>Looking for a way to update your bathroom? We offer a variety of bathroom remodeling services to help you create the bathroom of your dreams. Whether you're looking for a complete overhaul or just a few minor changes, we can help you achieve the look you want.</p>
+							<p>We start by working with you to understand your needs and goals for your bathroom remodel. Once we have a clear understanding of what you're looking for, we'll create a custom plan that fits your budget and timeline.</p>
 							<ul class="actions stacked">
-								<li><a href="tel:3854691995" class="button big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
+								<li><a href="tel:3854691995" class="button primary large big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -90,11 +123,14 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Basements</h2>
-							<p>Do you have an unfinished basement? We are offering $500 off any home improvement remodeling project. Sign up today and get a FREE quote.
-							</p>
+							<header>
+								<h2>Basements</h2>
+								<p>Basement remodels and basement finishing in Salt Lake City and Northern Utah</p>
+							</header>
+							<p>Looking to add more living space to your home? Consider finishing your basement. A finished basement can be used for a variety of purposes, such as a home theater, game room, bedroom, or office.</p>
+							<p>If you're ready to start planning your basement remodel, contact us today for a free consultation. We look forward to helping you create the perfect space for your needs.</p>
 							<ul class="actions stacked">
-								<li><a href="tel:3854691995" class="button big wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
+								<li><a href="tel:3854691995" class="button primary big large wide smooth-scroll-middle">Call Us (385) 469-1995</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -105,15 +141,15 @@
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Massa sed condimentum</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<h2>The #1 Home Service Company in Utah</h2>
+							<p>Kitchen Remodels, Bathroom Remodels, Basement Remodels, &amp; Basement Finishing</p>
 						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="images/Bath-2.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Ipsum Dolor</h3>
@@ -125,7 +161,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/Kitchen-1.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Feugiat Lorem</h3>
@@ -137,7 +173,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+										<img src="images/Basement-2.jpg" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Magna Amet</h3>
@@ -149,106 +185,10 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/04.jpg" class="image">
-										<img src="images/gallery/thumbs/04.jpg" alt="" />
+										<img src="images/Basement-3.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
-										<img src="images/gallery/thumbs/05.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/06.jpg" class="image">
-										<img src="images/gallery/thumbs/06.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/07.jpg" class="image">
-										<img src="images/gallery/thumbs/07.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/08.jpg" class="image">
-										<img src="images/gallery/thumbs/08.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Risus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/09.jpg" class="image">
-										<img src="images/gallery/thumbs/09.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Tempus Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/10.jpg" class="image">
-										<img src="images/gallery/thumbs/10.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Sed Etiam</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/11.jpg" class="image">
-										<img src="images/gallery/thumbs/11.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Magna Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-										<ul class="actions fixed">
-											<li><span class="button small">Details</span></li>
-										</ul>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/12.jpg" class="image">
-										<img src="images/gallery/thumbs/12.jpg" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Ipsum Dolor</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -260,7 +200,7 @@
 					</section>
 
 				<!-- Six -->
-					<section class="wrapper style1 align-center">
+					<!-- <section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Ipsum sed consequat</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
@@ -327,34 +267,7 @@
 								</section>
 							</div>
 						</div>
-					</section>
-
-				<!-- Get in touch -->
-					<section class="wrapper style1 align-center">
-						<div class="inner medium">
-							<h2>Get in touch</h2>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" value="" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" value="" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions special">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-
-						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
@@ -367,7 +280,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li> -->
 							</ul>
-							<p>&copy; All-Pro Home Services. Design by <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; All-Pro Home Services. Design by <a href="https://html5up.net" target="_blank">HTML5 UP</a>. Managed by <a href="https://325studio.com/" target="_blank" aria-label="325 Studio design agency Utah">325 Studio</a></p>
 						</div>
 					</footer>
 
